@@ -1,3 +1,10 @@
+2009-10-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* lib/ld-lib.exp (ld_simple_link_defsyms): New proc, adding
+	powerpc-*-rtems to code setting symbols, extracted from..
+	* ld-srec/srec.exp (run_srec_test): ..here.  Correct flags for sh64.
+	* ld-gc/gc.exp (test_gc): Use ld_simple_link_defsyms.
+
 2009-10-01  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* ld-spu/icache1.d: Update to new section layout.
